# studioflow

./: README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 265419476f31_create_users_table.py  37587cd67944_create_comments_table.py  44329043c67e_add_user_id_to_comments.py  a9a0fc2fefd6_add_owner_id_to_projects.py  f2bca30e0ae2_create_projects_table.py
backend/app/: main.py
backend/app/api/: auth.py  comments.py  projects.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/models/: comment.py  project.py  user.py
backend/app/repositories/: comment_repository.py  project_repository.py  user_repository.py
backend/app/schemas/: comment.py  project.py  user.py
frontend/app/: auth-status.tsx  delete-project-button.tsx  edit-project-form.tsx  page.tsx  project-board.tsx  project-card.tsx  project-form.tsx  status-badge.tsx
frontend/app/login/: page.tsx
frontend/app/projects/[id]/: comment-delete-button.tsx  comment-edit-form.tsx  comment-form.tsx  page.tsx
frontend/app/register/: page.tsx
frontend/lib/: api.ts
infra/: docker-compose.yml
